# rl-gym

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  RESEARCH_LOG.md  agent.py  episode_trace.py  gym.py  incident_generator.py  incidents.py  main.py  pyproject.toml
inference/: __init__.py  anthropic_client.py  types.py  vllm.py
infra/: cdk.json  package-lock.json  package.json  tsconfig.json
infra/lib/: coordinator-stack.ts  data-stack.ts  env-stack.ts  network-stack.ts
sregym/: agent.py  cli.py  client.py  env.py  generator.py  replay.py  rubric.py  server.py  tools.py  trace.py
tests/: test_inference.py  test_replay.py  test_rubric.py  test_server.py
